# routes/chat.js
@@ -1,0 +1,7 @@
+const express = require('express')
+const router = express.Router()
+const {getListChat} = require("../src/chat/controller");
+
+router.get('/list-chat', getListChat)
+
+module.exports = router
